--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,11 @@
+# * text eol=lf
+
+# Denote all files that are truly binary and should not be modified.
+*.png binary
+*.jpg binary
+*.ico binary
+
+# Files managed by git-crypt
 **secret** filter=git-crypt diff=git-crypt
 **private** filter=git-crypt diff=git-crypt
 restricted/** filter=git-crypt diff=git-crypt
