--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,8 +3,9 @@
 {
     "name": "Go",
     // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-    "image": "mcr.microsoft.com/devcontainers/go:1-1.21-bullseye",
+    "image": "mcr.microsoft.com/devcontainers/base:bullseye",
     "features": {
+        "ghcr.io/devcontainers/features/go:1": { },
         "ghcr.io/devcontainers/features/docker-in-docker:2": { },
         // "ghcr.io/devcontainers-contrib/features/actionlint:1": { },
         // "ghcr.io/guiyomh/features/golangci-lint:0": { },
@@ -54,7 +55,7 @@
     // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
     // "remoteUser": "root"
 
-    // "containerUser": "x6a",
+    // "containerUser": "",
 
     "containerEnv": {
     },
